--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="tabsScrollColor">#8a140e</color>
     <color name="light_grey">#d3d3d3</color>
 
+    <color name="follow_grey">#B2B2B2</color>
+
     <color name="thirtyfive_white">#59FFFFFF</color>
     <color name="fifty_white">#80FFFFFF</color>
 
