--- a/app/src/main/res/layout/fragment_people_nearby.xml
+++ b/app/src/main/res/layout/fragment_people_nearby.xml
@@ -68,6 +68,7 @@
               android:layout_marginEnd="@dimen/activity_horizontal_margin"
               android:layout_marginStart="@dimen/activity_horizontal_margin"
               android:layout_marginBottom="@dimen/activity_vertical_margin"
+              android:visibility="gone"
               android:maxLines="3"
               tools:text = "TEST TESTT TEST ETSTE TWETSDG GF DGDF GFDG FDG DG FD GDF"
 
