added delete and report post

--- a/app/src/main/res/layout/fragment_edit_name.xml
+++ b/app/src/main/res/layout/fragment_edit_name.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="@string/first_name_hint"
-            android:inputType="textCapWords"
+            android:inputType="textCapWords|textPersonName"
             android:maxLength="16"
             android:maxLines="1"
             android:singleLine="true"
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="@string/last_name_hint"
-            android:inputType="textCapWords"
+            android:inputType="textCapWords|textPersonName"
             android:maxLength="16"
             android:maxLines="1"
             android:singleLine="true"
