--- a/app/src/main/res/layout/fragment_facebook_signup.xml
+++ b/app/src/main/res/layout/fragment_facebook_signup.xml
@@ -59,7 +59,7 @@
                     android:layout_marginEnd="5dp"
                     android:layout_weight="1"
                     android:hint="@string/first_name_hint"
-                    android:inputType="textCapWords"
+                    android:inputType="textCapWords|textPersonName"
                     android:maxLength="16"
                     android:maxLines="1"
                     android:singleLine="true"
@@ -76,7 +76,7 @@
                     android:layout_marginStart="5dp"
                     android:layout_weight="1"
                     android:hint="@string/last_name_hint"
-                    android:inputType="textCapWords"
+                    android:inputType="textCapWords|textPersonName"
                     android:maxLength="16"
                     android:maxLines="1"
                     android:singleLine="true"
