--- a/app/src/main/res/xml/pref_profile_frag_main.xml
+++ b/app/src/main/res/xml/pref_profile_frag_main.xml
@@ -23,6 +23,9 @@
                     android:title="Privacy Policy"/>
         <Preference android:key="terms_of_service"
                     android:title="Terms of Service"/>
+        <Preference android:key="attributions"
+                    android:title="Attributions"
+                    />
     </PreferenceCategory>
 
     <PreferenceCategory>
