--- a/app/src/main/res/layout/fragment_linute_sign_up.xml
+++ b/app/src/main/res/layout/fragment_linute_sign_up.xml
@@ -103,7 +103,7 @@
                     android:layout_marginEnd="5dp"
                     android:layout_weight="1"
                     android:hint="@string/first_name_hint"
-                    android:inputType="textPersonName|textCapCharacters"
+                    android:inputType="textPersonName|textCapWords"
                     android:maxLength="16"
                     android:maxLines="1"
                     android:singleLine="true"
@@ -120,7 +120,7 @@
                     android:layout_marginStart="5dp"
                     android:layout_weight="1"
                     android:hint="@string/last_name_hint"
-                    android:inputType="textPersonName|textCapCharacters"
+                    android:inputType="textPersonName|textCapWords"
                     android:maxLength="16"
                     android:maxLines="1"
                     android:singleLine="true"
