--- a/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
+++ b/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
@@ -1,46 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="horizontal"
-              >
+>
 
     <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/comment_user_image"
         android:layout_width="@dimen/profile_image_radius"
         android:layout_height="@dimen/profile_image_radius"
-        android:scaleType="centerCrop"
-        app:border_width="1dp"
         android:layout_margin="@dimen/activity_horizontal_margin"
+        android:scaleType="centerCrop"
         app:border_color="@color/seperator_color"
-        />
+        app:border_width="1dp"
+    />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/comment_user_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/body_font_size"
-            android:textColor="@color/user_name_blue"
-            android:textStyle="bold"
-            tools:text = "Name Name"/>
+        <RelativeLayout android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/comment_user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/user_name_blue"
+                android:textSize="@dimen/body_font_size"
+                android:textStyle="bold"
+                tools:text="Name Name"/>
+
+            <TextView android:id="@+id/comment_time_ago"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textColor="@color/twentyfive_black"
+                      android:textSize="@dimen/sub_font_size"
+                      tools:text="1h"
+                      android:layout_alignParentEnd="true"
+            />
+
+
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/sub_font_size"
             android:textColor="@color/eighty_black"
-            tools:text = "test test test testtest test test testtest test test testtest test test testtest test test test "/>
+            android:textSize="@dimen/sub_font_size"
+            tools:text="test test test testtest test test testtest test test testtest test test testtest test test test "/>
 
     </LinearLayout>
 
