--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,7 @@
 
 
     <dimen name="profile_image_radius">52dp</dimen>
+    <dimen name="small_profile_image_radius">40dp</dimen>
 
 
     <dimen name="action_picture_size">40dp</dimen>
