--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/appbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
+            >
 
                 <android.support.v7.widget.Toolbar android:id="@+id/mainactivity_toolbar"
                                                    xmlns:android="http://schemas.android.com/apk/res/android"
@@ -29,7 +29,7 @@
                                                    android:background="@color/colorPrimary"
                                                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
                                                    app:layout_scrollFlags="scroll|enterAlways|snap"
-                    />
+                />
 
             </android.support.design.widget.AppBarLayout>
 
@@ -45,24 +45,29 @@
                                                                   android:layout_gravity="bottom|end"
                                                                   android:visibility="gone"
                                                                   app:borderWidth="0dp"
+                                                                  app:fab_addButtonColorNormal="@color/secondaryColor"
+                                                                  app:fab_addButtonColorPressed="#a3e1de"
                                                                   app:fab_expandDirection="up"
+                                                                  app:fab_labelsPosition="left"
                                                                   app:layout_behavior="com.linute.linute.UtilsAndHelpers.ScrollingFAMBehavior">
 
                 <com.getbase.floatingactionbutton.FloatingActionButton android:id="@+id/fabImage"
                                                                        android:layout_width="wrap_content"
                                                                        android:layout_height="wrap_content"
                                                                        android:src="@drawable/fab_camera"
-                                                                       app:fab_title="Photo"
+                                                                       app:fabSize="mini"
                                                                        app:fab_colorNormal="@color/white"
-                                                                       app:fab_colorPressed="@color/white_pressed"/>
+                                                                       app:fab_colorPressed="@color/white_pressed"
+                                                                       app:fab_title="Photo"/>
 
                 <com.getbase.floatingactionbutton.FloatingActionButton android:id="@+id/fabText"
                                                                        android:layout_width="wrap_content"
                                                                        android:layout_height="wrap_content"
                                                                        android:src="@drawable/fab_quote"
-                                                                       app:fab_title="Status"
+                                                                       app:fabSize="mini"
                                                                        app:fab_colorNormal="@color/white"
-                                                                       app:fab_colorPressed="@color/white_pressed"/>
+                                                                       app:fab_colorPressed="@color/white_pressed"
+                                                                       app:fab_title="Status"/>
 
 
             </com.getbase.floatingactionbutton.FloatingActionsMenu>
@@ -89,7 +94,7 @@
                 android:background="@drawable/unfollowing"
                 android:src="@drawable/unfollowing"
                 android:visibility="gone"
-            />
+        />
 
     </android.support.design.widget.NavigationView>
 
