--- a/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
+++ b/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
@@ -3,8 +3,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/colorPrimary"
-                android:focusableInTouchMode="true"
-                tools:context="com.desmond.squarecamera.EditSavePhotoFragment">
+                android:focusableInTouchMode="true">
 
     <View
         android:id="@+id/topView"
