--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,5 +40,13 @@
 
 
     <color name="search_layover_bg">#50000000</color>
+
+
+    <color name="post_color_0">#FFFFFF</color>
+    <color name="post_color_1">#3b4854</color>
+    <color name="post_color_2"></color>
+    <color name="post_color_3"></color>
+    <color name="post_color_4"></color>
+    <color name="post_color_5"></color>
 </resources>
 
