--- a/app/src/main/res/drawable/anon_checkbox.xml
+++ b/app/src/main/res/drawable/anon_checkbox.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@drawable/ic_anon" android:state_checked="false"/>
-    <item android:drawable="@drawable/anon_selected" android:state_checked="true"/>
+    <item android:drawable="@drawable/ic_anon_on_0" android:state_checked="true"/>
     <item android:drawable="@drawable/ic_anon"/>
     <!-- default state -->
 </selector>
