--- a/app/src/main/res/drawable/post_color_4.xml
+++ b/app/src/main/res/drawable/post_color_4.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
-    <solid android:color="#8ec1b0"/>
-    <corners android:radius="10dp"/>
+    <solid android:color="@color/post_color_4"/>
+    <corners android:radius="@dimen/post_create_corner_radius"/>
 </shape>
