--- a/app/src/main/res/layout-land/activity_new_post_create.xml
+++ b/app/src/main/res/layout-land/activity_new_post_create.xml
@@ -49,18 +49,10 @@
                                                          android:background="#FFFFFF">
 
         <EditText android:id="@+id/post_create_text"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  android:layout_margin="16dp"
-                  android:background="@null"
-                  android:inputType="textCapSentences|textMultiLine"
-                  android:textColor="#000000"
-                  android:gravity="center_vertical"
-                  android:imeOptions="actionDone"
-                  android:maxLines="8"
-                  tools:text="TESTTEST TEST TESTTESTTESTTESTTESTTESTTESTESTTEST"
-                  android:textSize="36sp"
-                  android:textStyle="italic"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:inputType="textCapSentences"
+                  android:textColor="#FFFFFF"
         />
 
 
@@ -186,7 +178,7 @@
 
 
     <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="match_parent"
+                  android:layout_height="wrap_content"
                   android:orientation="horizontal">
         <View android:layout_width="0px"
               android:layout_height="0px"
@@ -198,13 +190,42 @@
               android:layout_height="0px"
               android:layout_weight="1"/>
 
-        <com.linute.linute.SquareCamera.SquareImageView android:layout_width="0px"
-                                                        android:layout_height="wrap_content"
-                                                        android:layout_marginEnd="16dp"
-                                                        android:layout_marginStart="16dp"
-                                                        android:layout_weight="1"
-                                                        android:scaleType="centerCrop"
-                                                        android:src="@drawable/ic_anon_off"/>
+        <!--<com.linute.linute.UtilsAndHelpers.SquareFrameLayout-->
+            <!--android:id="@+id/status_create_anon_button"-->
+            <!--android:layout_width="0px"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1"-->
+            <!--android:background="@drawable/anon_button_off_background">-->
+
+            <!--<RelativeLayout android:layout_width="match_parent"-->
+                          <!--android:layout_height="match_parent"-->
+                          <!--android:layout_gravity="center">-->
+
+                <!--<ImageView android:layout_width="match_parent"-->
+                           <!--android:layout_height="wrap_content"-->
+                           <!--android:src="@drawable/ic_anon"-->
+                           <!--android:scaleType="centerCrop"-->
+                           <!--android:layout_centerHorizontal="true"-->
+                <!--/>-->
+
+                <!--<TextView android:layout_width="wrap_content"-->
+                          <!--android:layout_height="wrap_content"-->
+                          <!--android:text="OFF"-->
+                          <!--android:layout_marginBottom="4dp"-->
+                          <!--android:layout_alignParentBottom="true"-->
+                          <!--android:layout_centerHorizontal="true"-->
+                          <!--android:textColor="@color/fifty_white"-->
+                <!--/>-->
+            <!--</RelativeLayout>-->
+            <com.linute.linute.SquareCamera.SquareImageView android:layout_width="0px"
+                                                            android:layout_height="wrap_content"
+                                                            android:layout_weight="1"
+                                                            android:src="@drawable/ic_anon_on"
+            />
+
+
+
+        <!--</com.linute.linute.UtilsAndHelpers.SquareFrameLayout>-->
 
         <View android:layout_width="0px"
               android:layout_height="0px"
