--- a/app/src/main/res/layout/fragment_find_friends.xml
+++ b/app/src/main/res/layout/fragment_find_friends.xml
@@ -34,7 +34,7 @@
               android:gravity="center"
               android:textSize="18sp"
               android:visibility="invisible"
-              tools:text="Enter your friends name in the search bar"
+              tools:text="Enter your friend's name in the search bar"
         />
 
     <RelativeLayout android:id="@+id/findFriends_rationale_text"
