--- a/app/src/main/res/layout/activity_post_content_page.xml
+++ b/app/src/main/res/layout/activity_post_content_page.xml
@@ -21,6 +21,7 @@
 
             <RelativeLayout android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:visibility="gone"
                             android:layout_marginRight="@dimen/activity_horizontal_margin">
 
                 <RelativeLayout android:layout_width="wrap_content"
