--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -9,15 +9,15 @@
                 android:orientation="vertical">
 
 
-    <com.mikhaellopez.circularimageview.CircularImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/navigation_header_profile_image"
         android:layout_width="@dimen/nav_header_profile_side"
         android:layout_height="@dimen/nav_header_profile_side"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="2dp"
         android:layout_marginTop="40dp"
-        app:border_color="@color/colorPrimary"
-        app:border_width="1px"
+        app:civ_border_color="@color/colorPrimary"
+        app:civ_border_width="1dp"
         />
 
     <TextView android:id="@+id/drawerHeader_name"
