--- a/app/src/main/res/layout/events_discover.xml
+++ b/app/src/main/res/layout/events_discover.xml
@@ -39,17 +39,21 @@
         android:layout_height="match_parent"
         android:gravity="top|center_horizontal">
 
-        <com.mikhaellopez.circularimageview.CircularImageView
+        <!--<com.mikhaellopez.circularimageview.CircularImageView-->
+            <!--android:id="@+id/eventUserImage"-->
+            <!--android:layout_width="45dp"-->
+            <!--android:layout_height="45dp"-->
+            <!--card_view:civ_border="false"-->
+            <!--card_view:civ_border_color="#EEEEEE"-->
+            <!--card_view:civ_border_width="0dp"-->
+            <!--card_view:civ_shadow="false"-->
+            <!--card_view:civ_shadow_color="#8BC34A"-->
+            <!--card_view:civ_shadow_radius="10"/>-->
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/eventUserImage"
             android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:scaleType="centerCrop"
-            card_view:border="false"
-            card_view:border_color="#EEEEEE"
-            card_view:border_width="0dp"
-            card_view:shadow="false"
-            card_view:shadow_color="#8BC34A"
-            card_view:shadow_radius="10"/>
+            android:layout_height="45dp"/>
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
