--- a/app/src/main/res/layout/fragment_change_profile_image.xml
+++ b/app/src/main/res/layout/fragment_change_profile_image.xml
@@ -6,16 +6,15 @@
     android:layout_height="match_parent">
 
 
-    <com.mikhaellopez.circularimageview.CircularImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/changeprofileimage_image"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
-        android:scaleType="centerCrop"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
-        app:border_color="@color/grey_color"
-        app:border_width="1dp"/>
+        app:civ_border_color="@color/grey_color"
+        app:civ_border_width="1dp"/>
 
     <RelativeLayout android:id="@+id/changeprofileimage_buttons"
                     android:layout_width="match_parent"
