--- a/app/src/main/res/layout/fragment_facebook_signup.xml
+++ b/app/src/main/res/layout/fragment_facebook_signup.xml
@@ -32,16 +32,15 @@
                            android:src="@drawable/photo_rad"
                     />
 
-                <com.mikhaellopez.circularimageview.CircularImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/fbSignUp_profile_pic_view"
                     android:layout_width="130dp"
                     android:layout_height="130dp"
                     android:layout_centerInParent="true"
-                    android:scaleType="fitCenter"
                     android:src="@drawable/image_loading_background"
                     android:alpha="0.5"
-                    app:border_color="@color/seperator_color"
-                    app:border_width="1dp"/>
+                    app:civ_border_color="@color/seperator_color"
+                    app:civ_border_width="1dp"/>
 
             </RelativeLayout>
 
