--- a/app/src/main/res/layout/fragment_linute_sign_up.xml
+++ b/app/src/main/res/layout/fragment_linute_sign_up.xml
@@ -75,16 +75,15 @@
                            android:src="@drawable/photo_rad"
                     />
 
-                <com.mikhaellopez.circularimageview.CircularImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/signup_profile_pic_view"
                     android:layout_width="130dp"
                     android:layout_height="130dp"
                     android:layout_centerInParent="true"
                     android:alpha="0.4"
-                    android:scaleType="fitCenter"
                     android:src="@drawable/addphoto"
-                    app:border_color="@color/seperator_color"
-                    app:border_width="1dp"/>
+                    app:civ_border_color="@color/seperator_color"
+                    app:civ_border_width="1dp"/>
 
 
             </RelativeLayout>
