--- a/app/src/main/res/layout/fragment_new_chat_dialog.xml
+++ b/app/src/main/res/layout/fragment_new_chat_dialog.xml
@@ -35,12 +35,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.mikhaellopez.circularimageview.CircularImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/new_chat_user_image"
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_margin="5dp"
-            android:scaleType="centerCrop"
             android:src="@drawable/icon_user"
             card_view:border="false"
             card_view:border_width="0dp"
