--- a/app/src/main/res/layout/fragment_people_list_item.xml
+++ b/app/src/main/res/layout/fragment_people_list_item.xml
@@ -10,7 +10,19 @@
     <RelativeLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-        <com.mikhaellopez.circularimageview.CircularImageView
+        <!--<com.mikhaellopez.circularimageview.CircularImageView-->
+            <!--android:id="@+id/people_user_image"-->
+            <!--android:layout_width="@dimen/profile_image_radius"-->
+            <!--android:layout_height="@dimen/profile_image_radius"-->
+            <!--android:layout_marginStart="@dimen/activity_horizontal_margin"-->
+            <!--android:layout_marginEnd="@dimen/activity_horizontal_margin"-->
+            <!--android:layout_marginTop="@dimen/activity_horizontal_margin"-->
+            <!--android:layout_marginBottom="10dp"-->
+            <!--app:civ_border_color="@color/seperator_color"-->
+            <!--app:civ_border_width="1dp"-->
+            <!--/>-->
+
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/people_user_image"
             android:layout_width="@dimen/profile_image_radius"
             android:layout_height="@dimen/profile_image_radius"
@@ -18,15 +30,14 @@
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_horizontal_margin"
             android:layout_marginBottom="10dp"
-            android:scaleType="centerCrop"
-            app:border_color="@color/seperator_color"
-            app:border_width="1dp"
-            />
+            app:civ_border_color="@color/seperator_color"
+            app:civ_border_width="1dp"
+        />
 
         <ImageView
             android:id="@+id/list_people_image_state"
-            android:layout_width="@dimen/action_picture_size"
-            android:layout_height="@dimen/action_picture_size"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_margin="@dimen/activity_horizontal_margin"
