--- a/app/src/main/res/layout/fragment_people_nearby.xml
+++ b/app/src/main/res/layout/fragment_people_nearby.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.mikhaellopez.circularimageview.CircularImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/peopleNearby_profile_image"
             android:layout_width="@dimen/profile_image_radius"
             android:layout_height="@dimen/profile_image_radius"
@@ -20,12 +20,12 @@
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_horizontal_margin"
             android:layout_marginBottom="10dp"
-            app:border_color="@color/light_grey"
-            app:border_width="1dp"/>
+            app:civ_border_color="@color/light_grey"
+            app:civ_border_width="1dp"/>
 
         <ImageView android:id="@+id/peopleNearby_action_button"
-                   android:layout_width="@dimen/action_picture_size"
-                   android:layout_height="@dimen/action_picture_size"
+                   android:layout_width="40dp"
+                   android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="@dimen/activity_horizontal_margin"
