--- a/app/src/main/res/layout/fragment_profile_header2.xml
+++ b/app/src/main/res/layout/fragment_profile_header2.xml
@@ -24,14 +24,13 @@
                           android:layout_height="wrap_content"
                           android:orientation="vertical">
 
-                <com.mikhaellopez.circularimageview.CircularImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/profilefrag_prof_image"
                     android:layout_width="110dp"
                     android:layout_height="110dp"
                     android:layout_margin="@dimen/activity_horizontal_margin"
-                    android:scaleType="fitCenter"
-                    app:border_color="@color/seperator_color"
-                    app:border_width="1dp"/>
+                    app:civ_border_color="@color/seperator_color"
+                    app:civ_border_width="1dp"/>
 
 
                 <ImageView
