--- a/app/src/main/res/layout/fragment_profile_header3.xml
+++ b/app/src/main/res/layout/fragment_profile_header3.xml
@@ -15,25 +15,39 @@
     >
 
         <RelativeLayout android:id="@+id/profHeader_images"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="91dp"
+                        android:layout_height="91dp"
                         android:layout_centerInParent="true"
                         android:layout_marginTop="@dimen/activity_horizontal_margin"
+                        android:background="@drawable/circle"
         >
 
-            <ImageView android:layout_width="85dp"
-                       android:layout_height="85dp"
-                       android:src="@drawable/circle"
-            />
+            <!--<ImageView android:layout_width="90dp"-->
+            <!--android:layout_height="90dp"-->
+            <!--android:layout_centerInParent="true"-->
+            <!--android:src="@drawable/circle"-->
+            <!--/>-->
 
-            <com.mikhaellopez.circularimageview.CircularImageView
+            <!--<com.mikhaellopez.circularimageview.CircularImageView-->
+            <!--android:id="@+id/profilefrag_prof_image"-->
+            <!--android:layout_width="85dp"-->
+            <!--android:layout_height="85dp"-->
+            <!--android:layout_centerInParent="true"-->
+            <!--app:civ_border_color="@color/colorPrimary"-->
+            <!--app:civ_border_width="1dp"-->
+            <!--app:civ_shadow="false"-->
+            <!--/>-->
+
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profilefrag_prof_image"
                 android:layout_width="85dp"
                 android:layout_height="85dp"
                 android:layout_centerInParent="true"
-                android:scaleType="fitCenter"
-                app:border_color="@color/colorPrimary"
-                app:border_width="1dp"/>
+                app:civ_border_color="@color/colorPrimary"
+                app:civ_border_width="1dp"
+            />
+
+
         </RelativeLayout>
 
         <LinearLayout android:layout_width="match_parent"
@@ -143,8 +157,8 @@
     <LinearLayout android:id="@+id/prof_header_action_bar"
                   android:layout_width="match_parent"
                   android:layout_height="50dp"
-                  android:visibility="gone"
-                  android:orientation="horizontal">
+                  android:orientation="horizontal"
+                  android:visibility="gone">
 
         <LinearLayout android:id="@+id/prof_header_follow_button"
                       android:layout_width="0px"
