--- a/app/src/main/res/layout/friend_search_item.xml
+++ b/app/src/main/res/layout/friend_search_item.xml
@@ -7,16 +7,16 @@
 
     <ImageView
         android:id="@+id/friendSearchItem_profile_image"
-        android:layout_width="@dimen/friend_search_profile_side"
-        android:layout_height="@dimen/friend_search_profile_side"/>
+        android:layout_width="64dp"
+        android:layout_height="64dp"/>
 
     <ImageView android:id="@+id/friendSearchItem_add_button"
-               android:layout_width="@dimen/action_picture_size"
-               android:layout_height="@dimen/action_picture_size"
+               android:layout_width="40dp"
+               android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
-               android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
+               android:layout_marginEnd="@dimen/activity_horizontal_margin"
                tools:src="@drawable/add_friend"/>
 
     <LinearLayout android:layout_width="match_parent"
