--- a/app/src/main/res/layout/item_mentioned_person.xml
+++ b/app/src/main/res/layout/item_mentioned_person.xml
@@ -6,7 +6,7 @@
               android:layout_height="wrap_content"
               android:orientation="horizontal">
 
-    <com.mikhaellopez.circularimageview.CircularImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/mentioned_person_profile_image"
         android:layout_width="@dimen/profile_image_radius"
         android:layout_height="@dimen/profile_image_radius"
@@ -14,8 +14,8 @@
         android:layout_marginBottom="4dp"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        app:border_width="1dp"
-        app:border_color="@color/seperator_color"
+        app:civ_border_width="1dp"
+        app:civ_border_color="@color/seperator_color"
     />
 
     <TextView android:id="@+id/mentioned_person_name"
