--- a/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
+++ b/app/src/main/res/layout/squarecamera__fragment_edit_save_photo.xml
@@ -25,7 +25,7 @@
 
 
         <view android:id="@+id/editFragment_title_text"
-              class="com.linute.linute.SquareCamera.EditSavePhotoFragment$EditSaveEditText"
+              class="com.linute.linute.UtilsAndHelpers.CustomBackPressedEditText"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="80dp"
